@@ -50,6 +50,8 @@ BLACKLIST_LOGLEVEL=
 
 TCP_FLAGS_LOG_LEVEL=info
 
+SMURF_LOG_LEVEL=info
+
 ###############################################################################
 #	L O C A T I O N	  O F	F I L E S   A N D   D I R E C T O R I E S
 ###############################################################################
