@@ -628,8 +628,9 @@ sub validate_interfaces_file( $ )
 	%validoptions = (  blacklist   => SIMPLE_IF_OPTION,
 			   bridge      => SIMPLE_IF_OPTION,
 			   dhcp        => SIMPLE_IF_OPTION,
+			   nosmurfs    => SIMPLE_IF_OPTION,
 			   optional    => SIMPLE_IF_OPTION,
-			   routeback   => SIMPLE_IF_OPTION + IF_OPTION_ZONEONLY,
+ 			   routeback   => SIMPLE_IF_OPTION + IF_OPTION_ZONEONLY,
 			   sourceroute => BINARY_IF_OPTION,
 			   tcpflags    => SIMPLE_IF_OPTION,
 			   mss         => NUMERIC_IF_OPTION,
