@@ -2,6 +2,8 @@ Changes in Shorewall 4.3.2
 
 1) Added 'dhcp' option.
 
+2) Add 'allowBcast' and 'dropBcast' builtin actions to Shorewall6.
+
 Changes in Shorewall 4.3.1
 
 1) Allow addresses in rules to be enclosed in square brackets.
